Finish Kafka Project